# AI-Document-Intelligence-Platform-Data-Lake-RAG

./: .gitignore  README.md  demo.sh  pyproject.toml
airflow/: Dockerfile  docker-compose.yml  requirements.txt
airflow/dags/: financial_bootstrap_pipeline.py  sec_edgar_pipeline.py
api/: clients.py  config.py  main.py  s3_utils.py
api/routes/: curated.py  health.py  ingest.py  raw.py  staging.py  stats.py
docker/: docker-compose.yml
scripts/: benchmark_ingest.py  raw_to_staging.py  s3_metadata.py  staging_to_curated.py
scripts/ingestion/: sec_api.py  upload.py
